Add build bower vendors

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,10 @@
     <meta property="og:url" content="">
     <meta property="og:image" content="">
     <title>stapp</title>
+    <!-- build:css css/vendor.css-->
+    <!-- bower:css-->
+    <!-- endbower-->
+    <!-- endbuild-->
     <!-- build:css css/main.css-->
     <link rel="stylesheet" href="css/main.css">
     <!-- endbuild-->
