--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		
 
 		
-		<link href="css/style.css" rel="stylesheet">
+		<link href="css/style.26893d4f43512ef331d4.css" rel="stylesheet">
 		
 	</head>
 	<body>
 		<div id="stapp"></div>
 		
-		<script type="text/javascript" src="js/app.js"></script>
+		<script type="text/javascript" src="js/app.26893d4f43512ef331d4.js"></script>
 		
 	</body>
 </html>
