--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		
-		<link rel="shortcut icon" href="favicon.ico">
+		<link rel="shortcut icon" href="/favicon.ico">
 		
 
 		
-		<link href="css/style.4c11d5ddd250430b3c98.css" rel="stylesheet">
+		<link href="/css/style.8b05.css" rel="stylesheet">
 		
 	</head>
 	<body>
 		<div id="stapp"></div>
 		
-		<script type="text/javascript" src="js/app.4c11d5ddd250430b3c98.js"></script>
+		<script type="text/javascript" src="/js/app.8b05.js"></script>
 		
 	</body>
 </html>
