--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		
 
 		
-		<link href="/css/style.8b05.css" rel="stylesheet">
+		<link href="/css/style.d466.css" rel="stylesheet">
 		
 	</head>
 	<body>
 		<div id="stapp"></div>
 		
-		<script type="text/javascript" src="/js/app.8b05.js"></script>
+		<script type="text/javascript" src="/js/app.d466.js"></script>
 		
 	</body>
 </html>
