--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		
-		<link rel="shortcut icon" href="/favicon.ico">
+		<link rel="shortcut icon" href="favicon.ico">
 		
 
 		
-		<link href="/css/style.67d8.css" rel="stylesheet">
+		<link href="css/style.908d.css" rel="stylesheet">
 		
 	</head>
 	<body>
-
-        {"template":"!!ejs-loader!/Users/theaidem/work/projects/stapp/source/index.ejs","filename":"index.html","hash":false,"inject":false,"compile":true,"favicon":"/Users/theaidem/work/projects/stapp/source/images/favicon.ico","minify":false,"cache":true,"showErrors":true,"chunks":"all","excludeChunks":[],"title":"stapp","xhtml":false,"mode":"true"}
 		<div id="stapp"></div>
 		
-		<script type="text/javascript" src="/js/app.67d8.js"></script>
+		<script type="text/javascript" src="js/app.908d.js"></script>
 		
 	</body>
 </html>
